Adicionando imagens no arquivo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Gatinhos da Net</h1>
+    <img src="./imagens/gatinho1.jpg" alt="Gatinho 1">
+    <img src="./imagens/gatinho2.jpg" alt="Gatinho 2">
 </body>
+
 </html>
