adicionando imagens dos cachorrinhos

--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{
+            height: 200px;
+        }
+        h1{
+            font-size: 40px;
+            color: blue;
+            font-family:cursive
+        }
+    </style>
 </head>
 <body>
     <h1>Gatinhos da Net</h1>
     <img src="./imagens/gatinho1.jpg" alt="Gatinho 1">
     <img src="./imagens/gatinho2.jpg" alt="Gatinho 2">
+
+    <h1>Dogs da net</h1>
+    <img src="./imagens/dog1.jpg" alt="Doguinho 1">
+    <img src="./imagens/dog2.jpg" alt="Doguinho 2">
 </body>
 
 </html>
