instalando pacote handlebars, e editando e criando endpoints

--- a/apiNode/form/formulario.html
+++ b/apiNode/form/formulario.html
@@ -21,7 +21,7 @@
     </style>
     <body>  
         <div class="container">
-            <form action="/usuario/formulario" method="POST">
+            <form action="/myapi/usuario/formulario" method="POST">
                 <div class="input-container">
                     <label for="nome">Nome:</label>
                     <input type="text" name="nome" placeholder="Digite seu nome">
